Closed Bug 112737 Opened 23 years ago Closed 23 years ago

Unexpected default Act name is shown in From when Ctrl+E or Forward Inline or editing a Draft/Template message

Categories

(SeaMonkey :: MailNews: Message Display, defect, P2)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.8

People

(Reporter: olgam, Assigned: racham)

References

Details

Attachments

(1 file, 2 obsolete files)

Build: I've seen it on recent builds, not only today. If duplicate, please mark (though I checked). Overview: Unexpected default Account name is shown in From field when 'Forward'or 'Ctrl+E' existing message from any Account. It also happens when create new message by using address link from any Account. Steps to reproduce: 1. My default account is POP-3 3qatest08. 2. I use my IMAP olgam account. Select any message and press Ctrl+E to edit it. Get new message compose window with pre-populated From field. Observe account name is not what I am working with: I send from olgam but From field shows 3qatest08, which is first in the my account list. 3. Repeat step 2 but try to Forward the message. Actual Results: default account is shown instead of current one in the From field. Expected Results: correct account name in the From. Additional Information: I reproduced steps working from another POP account - not first one - the same result. No problem when create new message in regular way: Ctrl+M. Also 'Reply' or 'Reply All' brings correct Sender/Account name in the From field.
QA Contact: esther → olgam
Updating multiple bugs. This is a valid UI issue. Would be nice to have it fixed if time allows.
Adding myself to this bug. I finally migrated to Mozilla mail at home and set both my home mail account and work account under one profile. I'm using POP for both. The home POP account is set as default. I was pretty surprised when I tried to forward a work message in the work POP Inbox, and my home email address was populated in the new message ! The problem does not occur if I reply to the same message - the work address from the parent POP account is shown. I'm not sure if this is the same problem but it sounds like it.
I find that the problem occurs for Forward as inline but not for Forward as attachment. FWIW, bug 115590 also has this property.
reassigning to varada. I see the same thing. It should use the correct identity.
Assignee: sspitzer → varada
Keywords: nsbeta1+
Priority: -- → P2
Target Milestone: --- → mozilla0.9.9
actually, it's pretty bad to send with the wrong identity. reassigning to racham.
Assignee: varada → racham
Target Milestone: mozilla0.9.9 → mozilla0.9.8
This is a regression caused by David'a leak fix on 11/09. Identity object of mime_draft_data (mdd) is set to null which forced the subsequent functions to ask Compose service for default identity (nsMsgComposeService::GetDefaultIdentity) and that inturn got defaultAccount's idenitity from AccountManager. Hence the situation where the 'From' field is always the default account's identity. So, we can't set the identity object to null yet. It may have to be deferred further in the chain to fix that leak then. I will leave that to David. Adding David to the cc list. JFD, David, can you r & sr this patch. thanks.
Status: NEW → ASSIGNED
Keywords: patch
Refining the summary from Unexpected default Act name is shown in From when Ctrl+E or Forward to Unexpected default Act name is shown in From when Ctrl+E or Forward Inline or editing a Draft/Template message so that verification can be done on all relevant cases.
Summary: Unexpected default Act name is shown in From when Ctrl+E or Forward → Unexpected default Act name is shown in From when Ctrl+E or Forward Inline or editing a Draft/Template message
Also sending message from address book, using mail link. Also using mail link from any message. Let's add more if we find so.
Comment on attachment 63607 [details] [diff] [review] patch, v1.0 - do not set the identity object to null here Good catch! mime_parse_stream_complete which need the identity is called after mime_decompose_file_close_fn which was setting it to null. However, your patch will reintroduce the leak of identity! You still need to set it to null (this because mdd is not a c++ object) at the end of mime_parse_stream_complete just before we free mdd.
Attachment #63607 - Flags: needs-work+
*** Bug 118161 has been marked as a duplicate of this bug. ***
kewl ... we have a patch! hope it works and can make 0.9.8
updated patch coming up soon....
Attachment #63607 - Attachment is obsolete: true
Bhuvan, thanks for fixing this. Why not set identity to null right before we delete mdd (instead of 15 lines above it), in case some idiot like me comes along again and tries to do something with the identity in between?
Sure..David..will move it. For records, I am going to post another patch.
Comment on attachment 63878 [details] [diff] [review] patch, v1.2 - moving the leak fix further down (set identity to null just before deleting mdd) Good. R=ducarroz
Attachment #63878 - Flags: review+
Comment on attachment 63878 [details] [diff] [review] patch, v1.2 - moving the leak fix further down (set identity to null just before deleting mdd) sr=bienvenu
Attachment #63878 - Flags: superreview+
sorry for spam ... but, u guys rock!
Thanks for reviews. Fix checked in. Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Update after verifying on today's build: 01-29-2002, Not default IMAP Acct. I check in many other areas, which were not in the initial description. Let's clarify the expectation! Default Account is shown in 'From' in the following scenarious: 1. use mail link from any page (like this one) 2. use 'Send Page' from context menu on a Browser page 3. use 'Compose Mail To' from context menu in the Envelop area, 3-pane win, Not default account. 4. use 'Compose Email To' from Address Book tab on the Sidebar. 5. use mail link from Address Book, Card For <someone> area. FIXED in: 1. 'Compose new message' from Central page 2. Ctrl+M 3. Ctrl+E 4. Ctrl+R 5. Ctrl+L 6. Ctrl+Shift+R 7. 'Reply to Sender only' from Context menu on Message body area.
Verified on recent builds on Linux, Win2K, Mac OSX. I logged bug 122719 for #3 in my previous comment. Thanks JFD for confirming my doubts. Other than #3 cases are supposed to have default account name. Also I verified that using 'mailto:address' brings default account in 'From' field.
Status: RESOLVED → VERIFIED
*** Bug 122786 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: