Fixing bug 112737. Making sure the From field of the compose of window reflects the selected account rather than a default account in cases of forward inline, draft/template, edit message. Identity object is released at appropriate time. r=ducarroz, sr=bienvenu